# perceptual-image-hash

./: .gitignore  Makefile  README.md  fft.cpp  fft.hpp  hash.cpp  hash.hpp
results/: presentation_draft.pptx  test_run.txt
src/: CMakeLists.txt  Makefile  complex_ops.h  fft.hpp  hash.cpp  hash.hpp  main.cpp  serialfft  serialfft.cpp  serialutils.h  util.cpp  util.hpp
src/bmp/: bmpProcess.cpp  bmpProcess.hpp
src/bmp/easyBMP/: EasyBMP.cpp
src/fft/: fft.hpp  parallelfft.cpp  parallelfft.hpp  serialfft.cpp  serialfft.hpp  util.cpp  util.hpp
src/fft/clFFT/: clFFT.h
src/hash/: hash.cpp  hash.hpp
